--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <script src="core/user/user.service.js"></script>
     <script src="core/auth/auth.module.js"></script>
     <script src="core/auth/auth.service.js"></script>
+    <script src="main-header/main-header.module.js"></script>
+    <script src="main-header/main-header.component.js"></script>
     <script src="login/login.module.js"></script>
     <script src="login/login.component.js"></script>
     <script src="user-list/user-list.module.js"></script>
