--- a/public/login/login.template.html
+++ b/public/login/login.template.html
@@ -8,11 +8,11 @@
 		<label for="inputPassword" class="sr-only">Password</label>
 		<input type="password" ng-model="$ctrl.password" class="form-control" placeholder="Password" required>
 
-		<div class="checkbox">
+		<!--<div class="checkbox">
 			<label>
 				<input type="checkbox" value="remember-me"> Remember me
 			</label>
-		</div>
+		</div>-->
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 
 		<br />
