--- a/public/main-header/main-header.template.html
+++ b/public/main-header/main-header.template.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-show="$ctrl.user">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-show="$ctrl.user" class="ng-hide">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
