Added a beer shelf as the default landing page.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Beer Shelf</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="styles/font-awesome-4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="styles/beer-shelf.css" />
     <link rel="stylesheet" href="styles/signin.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
@@ -22,13 +23,13 @@
     <script src="main-header/main-header.component.js"></script>
     <script src="login/login.module.js"></script>
     <script src="login/login.component.js"></script>
+    <script src="shelf/shelf.module.js"></script>
+    <script src="shelf/shelf.component.js"></script>
     <script src="user-list/user-list.module.js"></script>
     <script src="user-list/user-list.component.js"></script>
   </head>
   <body>
       <div ng-view></div>
-
-
       <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
