--- a/public/main-header/main-header.template.html
+++ b/public/main-header/main-header.template.html
@@ -24,9 +24,12 @@
             <ul class="nav navbar-right top-nav">
                 <li class="dropdown">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
-                      <i class="fa fa-user"></i>{{$ctrl.user.name}}<b class="caret"></b>
+                      <i class="fa fa-user"></i> {{$ctrl.user.name}}<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
+                        <li>
+                            <a href="#!/users"><i class="fa fa-fw fa-users"></i> Users</a>
+                        </li>
                         <li>
                             <a href=""><i class="fa fa-fw fa-gear"></i> Settings</a>
                         </li>
