--- a/public/user-list/user-list.template.html
+++ b/public/user-list/user-list.template.html
@@ -25,30 +25,31 @@
           </tr>
         </table>
       </div>
+      
+      <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+        Add User
+      </button>
 
-      <form ng-submit="$ctrl.createUser()">
-        <h2>Create a new user</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" ng-model="$ctrl.newUser.email" class="form-control" placeholder="Email address" required autofocus>
+      <modal-window>
+        <form ng-submit="$ctrl.createUser()">
+          <h2>Create a new user</h2>
+          <label for="inputEmail" class="sr-only">Email address</label>
+          <input type="email" ng-model="$ctrl.newUser.email" class="form-control" placeholder="Email address" required autofocus>
 
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" ng-model="$ctrl.newUser.password" class="form-control" placeholder="Password" required>
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input type="password" ng-model="$ctrl.newUser.password" class="form-control" placeholder="Password" required>
 
-        <label for="inputText" class="sr-only">Name</label>
-        <input type="text" ng-model="$ctrl.newUser.name" class="form-control" placeholder="Full Name" required>
+          <label for="inputText" class="sr-only">Name</label>
+          <input type="text" ng-model="$ctrl.newUser.name" class="form-control" placeholder="Full Name" required>
 
-        <!--<div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>-->
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Create</button>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Create</button>
 
-        <br />
-        <div class="error-text">
-        {{$ctrl.error}}
-        </div>
-      </form>
+          <br />
+          <div class="error-text">
+          {{$ctrl.error}}
+          </div>
+        </form>
+      </modal-window>
     </div>
   </div>
 </div>
