--- a/public/main-header/main-header.template.html
+++ b/public/main-header/main-header.template.html
@@ -3,7 +3,7 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -12,7 +12,7 @@
             <a class="navbar-brand" href="#">Beer Shelf</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
+        <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li>
                     <a href="#">Shelf</a>
@@ -21,7 +21,7 @@
                     <a href="#">Reviews</a>
                 </li>
             </ul>
-            <ul class="nav navbar-right top-nav">
+            <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                       <i class="fa fa-user"></i> {{$ctrl.user.name}}<b class="caret"></b>
