--- a/book/shelf/shelf.template.html
+++ b/book/shelf/shelf.template.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-10">
       <!--Body content-->
-      <p>This is {{$ctrl.currentUser.name}}'s beer shelf!</p>
+      <p>This is a message: {{$ctrl.message}}!</p>
     </div>
   </div>
 </div>
