--- a/public/main-header.template.html
+++ b/public/main-header.template.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-show="$ctrl.user" class="ng-hide">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" class="ng-hide">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -14,28 +14,31 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li>
-                    <a href="#">Shelf</a>
+            <li ng-class="{ active: isActive('/test') }">
+                    <a href="#!/shelf">Shelf</a>
                 </li>
-                <li>
-                    <a href="#">Reviews</a>
+                <li ng-class="{ active: isActive('/test') }">
+                    <a href="#!/reviews">Reviews</a>
+                </li>
+                <li ng-class="{ active: isActive('/test') }">
+                    <a href="#!/test">Test</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
-                      <i class="fa fa-user"></i> {{$ctrl.user.name}}<b class="caret"></b>
+                      <i class="fa fa-user"></i> {{$ctrl.Auth.user.name}}<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#/users"><i class="fa fa-fw fa-users"></i> Users</a>
+                            <a href="#!/users"><i class="fa fa-fw fa-users"></i> Users</a>
                         </li>
                         <li>
-                            <a href="#/settings"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                            <a href="#!/settings"><i class="fa fa-fw fa-gear"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="#!/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
