Add reviews tab and active detail in the nav.

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     <script src="login/login.component.js"></script>
     <script src="shelf/shelf.module.js"></script>
     <script src="shelf/shelf.component.js"></script>
+    <script src="reviews/reviews.module.js"></script>
+    <script src="reviews/reviews.component.js"></script>
     <script src="user-list/user-list.module.js"></script>
     <script src="user-list/user-list.component.js"></script>
     <script src="modal-window/modal-window.module.js"></script>
