--- a/public/reviews/reviews.template.html
+++ b/public/reviews/reviews.template.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-10">
       <!--Body content-->
-      <p>Beer Shelf for {{$ctrl.currentUser.name}}</p>
+      <p>Beer reviews for {{$ctrl.currentUser.name}}</p>
     </div>
   </div>
 </div>
