Added settings with links for beer and brewery.

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <script src="core/user/user.service.js"></script>
     <script src="core/auth/auth.module.js"></script>
     <script src="core/auth/auth.service.js"></script>
+    <script src="core/brewery/brewery.module.js"></script>
+    <script src="core/brewery/brewery.service.js"></script>
     <script src="main-header/main-header.module.js"></script>
     <script src="main-header/main-header.component.js"></script>
     <script src="login/login.module.js"></script>
@@ -29,6 +31,8 @@
     <script src="reviews/reviews.component.js"></script>
     <script src="user-list/user-list.module.js"></script>
     <script src="user-list/user-list.component.js"></script>
+    <script src="settings/settings.module.js"></script>
+    <script src="settings/settings.component.js"></script>
     <script src="modal-window/modal-window.module.js"></script>
     <script src="modal-window/modal-window.component.js"></script>
   </head>
