--- a/public/main-header/main-header.template.html
+++ b/public/main-header/main-header.template.html
@@ -31,7 +31,7 @@
                             <a href="#!/users"><i class="fa fa-fw fa-users"></i> Users</a>
                         </li>
                         <li>
-                            <a href=""><i class="fa fa-fw fa-gear"></i> Settings</a>
+                            <a href="#!/settings"><i class="fa fa-fw fa-gear"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
                         <li>
