Add Accounts page
Accounts page manages the current user's account. When creating a new user - set the require password reset to true.

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     <script src="main-header/main-header.component.js"></script>
     <script src="login/login.module.js"></script>
     <script src="login/login.component.js"></script>
+    <script src="account/account.module.js"></script>
+    <script src="account/account.component.js"></script>
     <script src="shelf/shelf.module.js"></script>
     <script src="shelf/shelf.component.js"></script>
     <script src="reviews/reviews.module.js"></script>
