--- a/public/main-header/main-header.template.html
+++ b/public/main-header/main-header.template.html
@@ -28,6 +28,9 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
+                            <a href="#!/account"><i class="fa fa-fw fa-user"></i> Account</a>
+                        </li>
+                        <li>
                             <a href="#!/users"><i class="fa fa-fw fa-users"></i> Users</a>
                         </li>
                         <li>
