--- a/public/account/account.template.html
+++ b/public/account/account.template.html
@@ -20,18 +20,21 @@
           </div>
           <div class="form-group">
             <label for="inputPassword1">New Password</label>
-            <input id="inputPassword1" type="password" ng-model="$ctrl.currentUser.newPassword1" class="form-control" placeholder="Password" required>
+            <input id="inputPassword1" type="password" ng-model="$ctrl.currentUser.newPassword1" class="form-control" placeholder="Password">
           </div>
           <div class="form-group">
             <label for="inputPassword2">Confirm New Password</label>
-            <input id="inputPassword2" type="password" ng-model="$ctrl.currentUser.newPassword2" class="form-control" placeholder="Password" required>
+            <input id="inputPassword2" type="password" ng-model="$ctrl.currentUser.newPassword2" class="form-control" placeholder="Password">
           </div>
 
           <button class="btn btn-lg btn-primary btn-block" type="submit">Update</button>
 
           <br />
-          <div class="alert alert-danger fade in">
+          <div class="alert alert-danger fade in" ng-show='$ctrl.error'>
           {{$ctrl.error}}
+          </div>
+          <div class="alert alert-success fade in" ng-show='$ctrl.success'>
+            User updated
           </div>
         </form>
     </div>
