--- a/public/login/login.template.html
+++ b/public/login/login.template.html
@@ -1,6 +1,7 @@
 <div class="container">
 
 	<form class="form-signin" ng-submit="$ctrl.login()">
+
 		<h2 class="form-signin-heading">Please sign in</h2>
 		<label for="inputEmail" class="sr-only">Email address</label>
 		<input type="email" ng-model="$ctrl.email" class="form-control" placeholder="Email address" required autofocus>
@@ -8,17 +9,11 @@
 		<label for="inputPassword" class="sr-only">Password</label>
 		<input type="password" ng-model="$ctrl.password" class="form-control" placeholder="Password" required>
 
-		<!--<div class="checkbox">
-			<label>
-				<input type="checkbox" value="remember-me"> Remember me
-			</label>
-		</div>-->
 		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-
 		<br />
-		<div class="error-text">
+		<div class="alert alert-danger fade in" ng-show='$ctrl.error'>
 		{{$ctrl.error}}
 		</div>
 	</form>
 
-</div> <!-- /container -->
+</div>
