--- a/public/modal-window/modal-window.template.html
+++ b/public/modal-window/modal-window.template.html
@@ -1,15 +1,15 @@
 <!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" ng-attr-id="{{$ctrl.modalId}}" tabindex="-1" role="dialog" aria-labelledby="{{$ctrl.modalId}}-label" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+        <h4 class="modal-title" id="{{$ctrl.modalId}}-label">{{$ctrl.modalTitle}}</h4>
       </div>
       <div class="modal-body" ng-transclude></div>
-      <div class="modal-footer">
+      <div class="modal-footer" ng-hide="$ctrl.hideModalButtons">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary">Save changes</button>
       </div>
