--- a/public/settings/settings.template.html
+++ b/public/settings/settings.template.html
@@ -1,11 +1,5 @@
 <nav class="navbar navbar-default navbar-lower" role="navigation">
   <div class="container">
-    <!-- <form class="navbar-form navbar-left" role="search">
-      <button class="btn btn-success">Button</button>
-      <button class="btn btn-default">Button</button>
-      <button class="btn btn-default">Button</button>
-      <button class="btn btn-default">Button</button>
-    </form> -->
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#sub-navbar">
@@ -35,21 +29,60 @@
 
       <!--Body content-->
       <div ng-show="$ctrl.setting === 'breweries'">
-        <table class="table table-striped">
-          <thead class="thead-default">
-            <tr>
-              <th>Brewery Id</th>
-              <th>Name</th>
-              <th>Beer Advocate</th>
+        <div class="col-md-10">
+          <div class="form-inline">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-add-breweries">
+              Add Breweries
+            </button>
+            <div class="form-group">
+              <label for"txt-brewery-search">Filter:</label>
+              <input id="txt-brewery-search" ng-model="$ctrl.query.name" class="form-control">
+            </div>
+          </div>
+          <table class="table table-striped">
+            <thead class="thead-default">
+              <tr>
+                <th>Brewery Id</th>
+                <th>Name</th>
+                <th>Beer Advocate</th>
+              </tr>
+            </thead>
+            <tr ng-repeat="brewery in $ctrl.breweries | filter: $ctrl.query | orderBy: $ctrl.orderBy">
+              <td>{{brewery.id}}</td>
+              <td><a href="https://www.beeradvocate.com/beer/profile/{{brewery.beer_advocate_id}}/">{{brewery.name}}</a></td>
+              <td>{{brewery.beer_advocate_id}}</td>
             </tr>
-          </thead>
-          <tr ng-repeat="brewery in $ctrl.breweries | filter: $ctrl.query | orderBy: $ctrl.orderBy">
-            <td>{{brewery.id}}</td>
-            <td><a href="https://www.beeradvocate.com/beer/profile/{{brewery.beer_advocate_id}}/">{{brewery.name}}</a></td>
-            <td>{{brewery.beer_advocate_id}}</td>
-          </tr>
-        </table>
+          </table>
+        </div>
       </div>
     </div>
   </div>
+
+  <modal-window modal-id='modal-add-breweries' hide-modal-buttons='true'>
+    <form ng-submit="$ctrl.addSelectedBreweries()">
+      <h2>Add Breweries From Beer Advocate</h2>
+      <label for="inputEmail">Email address</label>
+      <input type="email" ng-model="$ctrl.newUser.email" class="form-control" placeholder="Email address" required autofocus>
+
+      <label for="inputPassword">Password</label>
+      <input type="password" ng-model="$ctrl.newUser.password" class="form-control" placeholder="Password" required>
+
+      <label for="inputText">Name</label>
+      <input type="text" ng-model="$ctrl.newUser.name" class="form-control" placeholder="Full Name" required>
+
+      <div class="form-check">
+        <label class="form-check-label">
+          <input class="form-check-input" type="checkbox" ng-model="$ctrl.newUser.reset_password_flag" >
+          Require password reset with login
+        </label>
+      </div>
+
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Add Selected</button>
+
+      <br />
+      <div class="error-text">
+      {{$ctrl.error}}
+      </div>
+    </form>
+  </modal-window>
 </div>
