--- a/public/settings/settings.template.html
+++ b/public/settings/settings.template.html
@@ -31,7 +31,7 @@
       <div ng-show="$ctrl.setting === 'breweries'">
         <div class="col-md-10">
           <div class="form-inline">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-add-breweries">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modal-add-breweries" ng-click="$ctrl.openAddBrewery()">
               Add Breweries
             </button>
             <div class="form-group">
@@ -39,7 +39,7 @@
               <input id="txt-brewery-search" ng-model="$ctrl.query.name" class="form-control">
             </div>
           </div>
-          <table class="table table-striped">
+          <table class="table table-striped" ng-show='$ctrl.breweries.length > 0'>
             <thead class="thead-default">
               <tr>
                 <th>Brewery Id</th>
@@ -58,31 +58,35 @@
     </div>
   </div>
 
-  <modal-window modal-id='modal-add-breweries' hide-modal-buttons='true'>
-    <form ng-submit="$ctrl.addSelectedBreweries()">
-      <h2>Add Breweries From Beer Advocate</h2>
-      <label for="inputEmail">Email address</label>
-      <input type="email" ng-model="$ctrl.newUser.email" class="form-control" placeholder="Email address" required autofocus>
+  <modal-window modal-id='modal-add-breweries' modal-title='Add Brewery' hide-modal-buttons='true'>
+    <h2>Add Breweries From Beer Advocate</h2>
 
-      <label for="inputPassword">Password</label>
-      <input type="password" ng-model="$ctrl.newUser.password" class="form-control" placeholder="Password" required>
+    <form class="brewery-search" ng-submit="$ctrl.searchBeerAdvocate()">
+      <div class="form-inline form-group">
+        <input id="txt-brewery-search" ng-model="$ctrl.baSearchString" class="form-control">
+        <button type="submit" class="btn btn-primary">Search</button>
+      </div>
+    </form>
 
-      <label for="inputText">Name</label>
-      <input type="text" ng-model="$ctrl.newUser.name" class="form-control" placeholder="Full Name" required>
+    <form ng-show="$ctrl.baList.length > 0" ng-submit="$ctrl.addSelectedBreweries()">
+      <div class="form-inline brewery-search">
+        <button type="button" class="btn btn-primary" ng-click="$ctrl.selectBreweries(true)">Check All</button>
+        <button type="button" class="btn btn-primary" ng-click="$ctrl.selectBreweries(false)">Clear</button>
+      </div>
 
-      <div class="form-check">
-        <label class="form-check-label">
-          <input class="form-check-input" type="checkbox" ng-model="$ctrl.newUser.reset_password_flag" >
-          Require password reset with login
+      <div class="list-group ">
+        <label class="list-group-item list-group-clickable" ng-repeat="baBrewery in $ctrl.baList">
+          <input class="form-check-input" type="checkbox" ng-model="baBrewery.checked" />
+          <a href="https://www.beeradvocate.com/beer/profile/{{baBrewery.beer_advocate_id}}">{{baBrewery.name}}</a>
         </label>
       </div>
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">Add Selected</button>
 
       <br />
-      <div class="error-text">
-      {{$ctrl.error}}
-      </div>
+      <div class="alert alert-danger fade in" ng-show='$ctrl.addError'>
+  		{{$ctrl.addError}}
+  		</div>
     </form>
   </modal-window>
 </div>
