Add all the beers for a brewery from BA

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
     <script src="core/auth/auth.service.js"></script>
     <script src="core/brewery/brewery.module.js"></script>
     <script src="core/brewery/brewery.service.js"></script>
+    <script src="core/beer/beer.module.js"></script>
+    <script src="core/beer/beer.service.js"></script>
     <script src="main-header/main-header.module.js"></script>
     <script src="main-header/main-header.component.js"></script>
     <script src="login/login.module.js"></script>
