--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <script src="core/brewery/brewery.service.js"></script>
     <script src="core/beer/beer.module.js"></script>
     <script src="core/beer/beer.service.js"></script>
+    <script src="core/shelfBeer/shelfBeer.module.js"></script>
+    <script src="core/shelfBeer/shelfBeer.service.js"></script>
     <script src="main-header/main-header.module.js"></script>
     <script src="main-header/main-header.component.js"></script>
     <script src="login/login.module.js"></script>
