Close modal popups and some minor ui updates.

--- a/public/modal-window/modal-window.template.html
+++ b/public/modal-window/modal-window.template.html
@@ -1,5 +1,10 @@
 <!-- Modal -->
-<div class="modal fade" ng-attr-id="{{$ctrl.modalId}}" tabindex="-1" role="dialog" aria-labelledby="{{$ctrl.modalId}}-label" aria-hidden="true">
+<div class="modal fade" 
+    ng-attr-id="{{$ctrl.modalId}}"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="{{$ctrl.modalId}}-label"
+    aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
