Add modal-focus attribute to the modal controller

--- a/public/modal-window/modal-window.template.html
+++ b/public/modal-window/modal-window.template.html
@@ -1,6 +1,6 @@
 <!-- Modal -->
-<div class="modal fade" 
-    ng-attr-id="{{$ctrl.modalId}}"
+<div class="modal fade"
+    id="{{$ctrl.modalId}}"
     tabindex="-1"
     role="dialog"
     aria-labelledby="{{$ctrl.modalId}}-label"
