--- a/public/main-header/main-header.template.html
+++ b/public/main-header/main-header.template.html
@@ -15,10 +15,10 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li ng-class="{ active: $ctrl.isActive('/shelf') }">
-                    <a href="#!/shelf">Shelf</a>
+                    <a href="/shelf">Shelf</a>
                 </li>
                 <li ng-class="{ active: $ctrl.isActive('/reviews') }">
-                    <a href="#!/reviews">Reviews</a>
+                    <a href="/reviews">Reviews</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
@@ -28,17 +28,17 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#!/account"><i class="fa fa-fw fa-user"></i> Account</a>
+                            <a href="/account"><i class="fa fa-fw fa-user"></i> Account</a>
                         </li>
                         <li>
-                            <a href="#!/users"><i class="fa fa-fw fa-users"></i> Users</a>
+                            <a href="/users"><i class="fa fa-fw fa-users"></i> Users</a>
                         </li>
                         <li>
-                            <a href="#!/settings"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                            <a href="/settings"><i class="fa fa-fw fa-gear"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#!/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                         </li>
                     </ul>
                 </li>
