--- a/public/settings/settings.template.html
+++ b/public/settings/settings.template.html
@@ -13,10 +13,10 @@
   <div id="sub-navbar" class="collapse navbar-collapse">
     <ul class="nav navbar-nav navbar-left">
         <li ng-class="{ active: $ctrl.isActive('breweries') }">
-            <a href="#!/settings/breweries">Breweries</a>
+            <a href="/settings/breweries">Breweries</a>
         </li>
         <li ng-class="{ active: $ctrl.isActive('beers') }">
-            <a href="#!/settings/beers">Beers</a>
+            <a href="/settings/beers">Beers</a>
         </li>
     </ul>
   </div>
