--- a/public/shelf/shelf.template.html
+++ b/public/shelf/shelf.template.html
@@ -8,7 +8,7 @@
         </button>
         <div class="form-group">
           <label for"txt-brewery-search left-pad-control">Filter:</label>
-          <input id="txt-brewery-search" ng-model="$ctrl.query.name" class="form-control" autofocus>
+          <input id="txt-brewery-search" ng-model="$ctrl.query.beer.name" class="form-control" autofocus>
         </div>
       </div>
       <table class="table table-striped" ng-show='$ctrl.shelfBeers.length > 0'>
@@ -77,11 +77,11 @@
             <label for"txt-vintage left-pad-control">Vintage</label>
             <input id="txt-vintage" ng-model="$ctrl.newBeer.vintage" class="form-control">
           </div>
-
+<!--
           <div class="form-group" ng-repeat="beerAttribute in $ctrl.newBeer.shelf-beer-attributes | filter: $ctrl.query | orderBy:$ctrl.orderBy:$ctrl.reverse">
             <label for"txt-vintage left-pad-control">Vintage</label>
             <input id="txt-vintage" ng-model="$ctrl.newBeer.vintage" class="form-control">
-          </div>
+          </div>-->
 
           <button class="btn btn-lg btn-primary btn-block" type="submit">Save</button>
           <br />
