--- a/public/shelf/shelf.template.html
+++ b/public/shelf/shelf.template.html
@@ -77,11 +77,11 @@
             <label for"txt-vintage left-pad-control">Vintage</label>
             <input id="txt-vintage" ng-model="$ctrl.newBeer.vintage" class="form-control">
           </div>
-<!--
-          <div class="form-group" ng-repeat="beerAttribute in $ctrl.newBeer.shelf-beer-attributes | filter: $ctrl.query | orderBy:$ctrl.orderBy:$ctrl.reverse">
-            <label for"txt-vintage left-pad-control">Vintage</label>
-            <input id="txt-vintage" ng-model="$ctrl.newBeer.vintage" class="form-control">
-          </div>-->
+
+          <div class="form-group" ng-repeat="beerAttribute in $ctrl.newBeer.beerAttributes">
+            <label class="left-pad-control">{{beerAttribute.attributeType.name}}</label>
+            <input ng-model="beerAttribute.value" class="form-control">
+          </div>
 
           <button class="btn btn-lg btn-primary btn-block" type="submit">Save</button>
           <br />
